--- a/packages/contact-center/cc-components/src/components/task/Task/styles.scss
+++ b/packages/contact-center/cc-components/src/components/task/Task/styles.scss
@@ -18,8 +18,20 @@
 
   mdc-avatar {
     --mdc-avatar-default-background-color: var(--mds-color-theme-avatar-glass-normal);
-    --mdc-avatar-default-foreground-color: var(--mds-color-theme-indicator-stable);
+
+    &.telephony {
+      --mdc-avatar-default-foreground-color: var(--mds-color-theme-indicator-stable);
+    }
+    
+    &.email {
+      --mdc-avatar-default-foreground-color: var(--mds-color-theme-common-touchbar-background-violet-normal);
+    }
+    
+    &.chat {
+      --mdc-avatar-default-foreground-color: var(--mds-color-theme-indicator-secure);
+    }
   }
+
 }
 
 .task-text {
